Fix regression caused by setting z-index for react-select-container with too loose selector

--- a/frontend/packages/volto-ploneconf-core/src/theme/components/blocks/_search.scss
+++ b/frontend/packages/volto-ploneconf-core/src/theme/components/blocks/_search.scss
@@ -1,5 +1,5 @@
 // Fix issue where search facet dropdown opens behind SessionTile, because
 // SessionTile uses Container with z-index: 10 in volto-light-theme.
-.react-select-container {
+.search.block .facets .react-select-container {
   z-index: 11;
 }
